# budget

./: .gitignore  Cargo.toml  README.md  build.rs
migrations/2022-04-30-184054_create_tables/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/api/: mod.rs
src/entities/: mod.rs
src/ui/: accounts.60  accounts.slint  app.60  app.slint  budget.60  budget.slint  sidebar.slint  table.60  table.slint  transactions.60  transactions.slint
