[package]
name = "budget"
author = "James Blacklock <jamesblacklock@protonmail.com>"
version = "0.1.0"
edition = "2018"

# for sixtyfps
build = "build.rs"
resolver = "2" # avoid dependency conflicts on some platforms

[dependencies]
regex = "1"
smart-default = "^0.6"
chrono = "^0.4"
async-std = "^1.10"
sea-query = "^0"
sea-orm = { version = "^0", features = [
	"sqlx-sqlite", "runtime-async-std-rustls", "macros" ], default-features = false }
sixtyfps = { version = "0.1.3", features = ["backend-qt"] }

[build-dependencies]
sixtyfps-build = "0.1.3"