[package]
name = "budget"
author = "James Blacklock <jamesblacklock@protonmail.com>"
version = "0.1.0"
edition = "2021"

# for sixtyfps
# resolver = "2" # avoid dependency conflicts on some platforms

[dependencies]
chrono = "^0.4"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
slint = "0.2.1"

[build-dependencies]
slint-build = "0.2.1"